--- a/19X_Traceability_UWP/19X_Traceability_UWP.csproj
+++ b/19X_Traceability_UWP/19X_Traceability_UWP.csproj
@@ -128,7 +128,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BL\ControlKeyService.cs" />
+    <Compile Include="BL\ExportService.cs" />
     <Compile Include="BL\FoldingKeyService.cs" />
+    <Compile Include="BL\KeyService.cs" />
+    <Compile Include="BL\StaticKeyService.cs" />
     <Compile Include="DAL\DbHandler.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
